<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            />
        <EditText
            android:layout_width="50dp" android:id="@+id/tf_size" android:inputType="number" android:imeOptions="actionNext"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent" android:layout_marginTop="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            />
        <EditText
            android:layout_width="50dp" android:id="@+id/tf_moves" android:inputType="number" android:imeOptions="actionDone"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>


    <com.idatagroup.knight.ChessboardView
        android:layout_width="match_parent" android:id="@+id/vw_chessboard"
        android:layout_height="wrap_content"></com.idatagroup.knight.ChessboardView>

    <TextView
        android:layout_width="wrap_content" android:text="@string/putKnight" android:id="@+id/lbl_putKnight"
        android:layout_height="wrap_content"></TextView>

    <TextView
        android:layout_width="wrap_content" android:text="@string/putKing" android:id="@+id/lbl_putKing"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:layout_width="match_parent" android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content" android:id="@+id/btn_reset" android:text="@string/reset"
            android:layout_height="wrap_content"></Button>
        <View
            android:layout_width="0dp" android:layout_weight="1"
            android:layout_height="match_parent"></View>
        <Button
            android:layout_width="wrap_content" android:id="@+id/btn_calculate" android:text="@string/calculate"
            android:layout_height="wrap_content"></Button>
        <Button
            android:layout_width="wrap_content" android:id="@+id/btn_cancel" android:text="@string/cancel" android:visibility="gone"
            android:layout_height="wrap_content"></Button>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent" android:id="@+id/lbl_solutions" android:textAlignment="center" android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent" android:id="@+id/lv_results"
        android:layout_height="0dp" android:layout_weight="1"></androidx.recyclerview.widget.RecyclerView>
</LinearLayout>